--- a/SASS/SCSS/style.scss
+++ b/SASS/SCSS/style.scss
@@ -9,7 +9,6 @@ body{
     padding: 0px;
 }
 
-
 #nav__2{
     border-bottom:$secondary-color;
     border-bottom-style: solid;
@@ -41,16 +40,16 @@ h1{
     color: gray;
 }
 
-.perfil{
+.p__perfil{
     float: right;
-    display: flex;
-    justify-content: flex-start;
+    margin-top: 30px;
 }
 .img__perfil{
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     padding: 10px;
+    margin-top: 10px;
 }
 
 .bt{
@@ -58,6 +57,7 @@ h1{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 100px;
 }
 
 span{
@@ -105,70 +105,7 @@ footer{
         background: green;
     }
 }
-
-.pagina__1{
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-columns: 100%;
-    grid-template-rows: 15% 20% 20%;
-    grid-row-gap: 10px;
-    grid-column-gap: none;
-    align-items: stretch;
-    justify-items: stretch;
-    grid-template-areas: 
-    "Header"
-    "Nav"
-    "Home"
-    "Footer"
-    ;
-}
-.pagina__0{
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-columns: 100%;
-    grid-template-rows: 15% 40% 20%;
-    grid-row-gap: 10px;
-    grid-column-gap: none;
-    align-items: stretch;
-    justify-items: stretch;
-    grid-template-areas: 
-    "Header"
-    "Nav"
-    "Home"
-    "Footer"
-    ;
-}
-.pagina__2{
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-columns: 100%;
-    grid-template-rows: 50% 20% 20%;
-    grid-row-gap: 10px;
-    grid-column-gap: none;
-    align-items: stretch;
-    justify-items: stretch;
-    grid-template-areas: 
-    "Header"
-    "Nav"
-    "Home"
-    "Footer"
-    ;
-}
-
-Header{
-    grid-area: Header;
-}
-Nav{
-    grid-area: Nav;
-}
-section{
-    grid-area: Home;
-}
 #foot{
-    grid-area: Footer;
     font-style: oblique;
 }
 
@@ -180,6 +117,8 @@ section{
 
 #bt__1{
     @include bt(cyan, none, monospace);
+    text-decoration: none;
+    color: $primary-color;
     &:hover{
         transform: scale(1.2, 1.2);
         background-color: white;
@@ -190,6 +129,8 @@ section{
 }
 #bt__2{
     @include bt(black, none, monospace);
+    text-decoration: none;
+    color: white;
     &:hover{
         transform: scale(1.2, 1.2);
         background-color: black;
@@ -203,7 +144,7 @@ section{
     background-color: cyan;
 }
 #ebutton{
-    color: $secondary-color;
+    color: $primary-color;
     border-style: solid;
     border: 1px solid;
     border-color: cyan;
@@ -216,7 +157,7 @@ section{
 .dropdown{
     display: flex;
     justify-content: flex-end;
-    margin-right: 10px;
+    margin-right: 60px;
 }
 
 .terminos{
@@ -286,7 +227,6 @@ form{
     @include registro($secondary-color, 20px, $font-family)
 }
 
-
 .home__button{
     float: left;
     margin: 30px;
@@ -308,17 +248,8 @@ form{
     height: 50px;
     border-radius: 50%;
 }
-.bring{
-    display: inline-block;
-}
-.bring__2{
-    float: left;
-    margin: 50px;
-    border: dashed;
-    height: 100px;
-}
+
 .usuarios_msj{
-    padding-left: 10px;
     padding-top: 15px;
     display: flex;
     justify-content: center;
@@ -337,4 +268,12 @@ form{
     font-size: 10px;
     margin-bottom: 50px;
     margin-left: 20px;
+}
+
+.container{
+    margin: 100px;
+}
+.container-usuarios{
+    margin-left: 30px;
+    margin-top: 50px;
 }
