--- a/views/ofrecer.html
+++ b/views/ofrecer.html
@@ -11,45 +11,52 @@
     <title>Ofrecer</title>
 </head>
 <body>
-    <div class="pagina__2">
-    <header>
-        <h1><a class="btn__h1" href="./home.html">Bringn</a></h1>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-        </style>
-        <p id="subt">Pedilo. Te lo traen.</p>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
-        </style>
-        
-        <!-- nav -->
-        <nav class="mic" id="nav1"> 
+    <div class="container-fluid">
+        <div class="container-fluid row bloqueGeneral"> 
+                <div class="col-2 bloque1"></div>
+                <header class="col-8 bloque2">
+                <h1><a class="btn__h1" href="./home.html">Bringn</a></h1>
+                <style>
+                    @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+                </style>
+                <p id="subt">Pedilo. Te lo traen.</p>
+                <style>
+                    @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+                </style>
+                </header>
+                <div class="col-2 bloque3">
+                    <span>
+                    <p class="p__perfil">PERFIL</p>
+                        <img class="img__perfil" src="../SASS/resources/Masla.jpg" alt="Foto de Perfil">
+                    </span>
+                </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark">
             <div class="home__button">
                 <a class="btn btn-primary" id="hbutton" href="./home.html" role="button">HOME</a>
             </div>
             <div class="nav__btn">
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" id="obutton"  href="./ofrecer.html">OFRECER</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="ebutton" href="./encargar.html">ENCARGAR</a>
-                </li>
-            </ul>
-        </div>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" id="obutton" href="./ofrecer.html">OFRECER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="ebutton" href="./encargar.html">ENCARGAR</a>
+                    </li>
+                </ul>
+            </div>
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"> 
                         Mas +
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <li><a class="dropdown-item" href="#">¿Cómo funciona?</a></li>
                         <li><a class="dropdown-item" href="#">Quienes somos</a></li>
                     </ul>
-                    </div>
-                
-            </nav>
-    </header>
-    
+                </div>
+        </nav>
+
+<section class="container">
     <form class="o">
     <label class="o__Esc" for="escribir"></label>
     <input id="escribir"  type="text" placeholder="Escribir algo...">
@@ -65,7 +72,7 @@
     </form>
     
     <div class="terminos">Al publicar el usuario reconoce haber aceptado y leido los terminos y condiciones sujetos al mismo</div>
-
+</section>
 
     <footer id="foot">
         <hr>
