--- a/views/home.html
+++ b/views/home.html
@@ -57,21 +57,25 @@
         </nav>
 
     <section class="container-usuarios">
-        <div>
-            <span>
-                <img class="img__usuario" src="../SASS/resources/alex.jpg" alt="Foto de Usuario">
-                <p class="usuarios_msj">Traigo celulares de España. Vuelo el 30/08. Por $50</p>
-            </span>
+        <div class="bringn">
+            <div class="container-fluid row">
+                <div class="col-1">
+                    <img class="img__usuario" src="../SASS/resources/alex.jpg" alt="Foto de Usuario">
+                </div>
+                <p class="col-4 usuarios_msj">Traigo celulares de España. Vuelo el 30/08. Por $50</p>
+            </div>
                 <button type="button" class="btn btn-light" id="interac__1">Comentar</button>
                 <button type="button" class="btn btn-light" id="interac__2">Contactar</button>
         </div>
-        <div>
-            <span>
-                <img class="img__usuario" src="../SASS/resources/alex.jpg" alt="Foto de Usuario">
-                <p class="usuarios_msj">Traigo celulares de España. Vuelo el 30/08. Por $50</p>
-            </span>
+        <div class="bringn">
+            <div class="container-fluid row">
+                <div class="col-1">
+                    <img class="img__usuario" src="../SASS/resources/alex.jpg" alt="Foto de Usuario">
+                </div>
+                    <p class="col-6 usuarios_msj">Hola! Necesito un Ipad traido de USA. Preferentemente antes del 10/09. Pago $100</p>
+            </div>
                 <button type="button" class="btn btn-light" id="interac__1">Comentar</button>
-                <button type="button" class="btn btn-light" id="interac__2">Contactar</button>
+                <button type="button" class="btn btn-light" id="interac__2">Traer</button>
         </div>
     </section>
 
