--- a/views/registro.html
+++ b/views/registro.html
@@ -7,38 +7,78 @@
     <link rel="stylesheet" href="../SASS/CSS/styles1.css">
     <meta name="keywords" content="COURRIER, ENVIOS, SERVICIO, REGISTRARME, REGISTRAR">
     <meta name="description" content="Plataforma para envios entre individuos. Pagate tu viaje trayendo cosas.">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <title>Registrarse</title>
 </head>
 <body>
-    <h1 class="h1__registro">Registrarse</h1>
-    <form class="form__reg">
-        <label for="Nombre"></label>
-        <input id="nombre" type="text" placeholder="Nombre">
-        <label for="Apellido"></label>
-        <input id="apellido" type="text" placeholder="Apellido">
-        <br>
-        <label for="Telefono"></label>
-        <input id="telefono" type="tel" placeholder="Telefono">
-        <br>
-        <label for="email"></label>
-        <input id="email" type="email" placeholder="Email">
-        <br>
-        <label for="password"></label>
-        <input id="password" type="text" placeholder="Password">
-        <br>
-        <input type="radio" name="Sexo" value="Masculino"> Masculino
-        <input type="radio" name="Sexo" value="Femenino"> Femenino
-        <br>
-        <h2 class="h2__registro">Seleccionar moneda</h2>
-        <select name="Moneda" id="Moneda a elegir">
-            <option value="Euro">€</option>
-            <option value="Dolar">$</option>
-            <option value="Bitcoin">BTC</option>
-        </select>
-        <br>
-        <button type="button" class="btn btn-primary" id="bt__submit" onclick="window.location='home.html'">Submit</button>
-        <input type="reset" value="Reset">
+    <form class="row g-3" id="formregistro">
+    <div class="row">
+        <div class="col">
+            <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+        </div>
+        <div class="col">
+            <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+        </div>
+    </div>
+        <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail4">
+        </div>
+        <div class="col-md-6">
+            <label for="inputPassword4" class="form-label">Password</label>
+            <input type="password" class="form-control" id="inputPassword4">
+        </div>
+        <div class="col-12">
+            <label for="inputAddress" class="form-label">Address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        </div>
+        <div class="col-md-6">
+            <label for="inputCity" class="form-label">City</label>
+            <input type="text" class="form-control" id="inputCity">
+        </div>
+        <div class="col-md-6">
+            <label for="inputState" class="form-label">State</label>
+            <input type="text" class="form-control" id="inputState">
+        </div>
+        <div class="col-md-6">
+            <label for="inputState" class="form-label">Country</label>
+            <select id="inputState" class="form-select">
+            <option selected>Choose...</option>
+            <option>Argentina</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <label for="inputZip" class="form-label">Zip</label>
+            <input type="text" class="form-control" id="inputZip">
+        </div>
+        <div class="col-md-2">
+            <label for="inputCurrency" class="form-label">Currency</label>
+            <select id="inputCurrency" class="form-select">
+            <option selected>Choose...</option>
+            <option>$</option>
+            <option>€</option>
+            <option>BTC</option>
+            <option>ETH</option>
+            <option>Pesos</option>
+            </select>
+        </div>
+        <div class="col-12">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                <label class="form-check-label" for="invalidCheck">
+                Agree to terms and conditions
+                </label>
+                <div class="invalid-feedback">
+                You must agree before submitting.
+            </div>
+            </div>
+        </div>
+            <div class="col-12">
+                <button class="btn btn-primary" id="subbt" type="submit">Submit form</button>
+            </div>
     </form>
-    
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
 </html>
