--- a/views/home.html
+++ b/views/home.html
@@ -13,23 +13,23 @@
 <body>
     <div class="container-fluid">
         <div class="container-fluid row bloqueGeneral"> 
-                <div class="col-2 bloque1"></div>
+            <div class="col-2 bloque1"></div>
                 <header class="col-8 bloque2">
-                <h1><a class="btn__h1" href="./home.html">Bringn</a></h1>
-                <style>
-                    @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-                </style>
-                <p id="subt">Pedilo. Te lo traen.</p>
-                <style>
-                    @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
-                </style>
+                    <h1><a class="btn__h1" href="../index.html">Bringn</a></h1>
+                    <style>
+                        @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+                    </style>
+                    <p id="subt">Pedilo. Te lo traen.</p>
+                    <style>
+                        @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+                    </style>
                 </header>
                 <div class="col-2 bloque3">
                     <span>
                     <p class="p__perfil">PERFIL</p>
                         <img class="img__perfil" src="../SASS/resources/Masla.jpg" alt="Foto de Perfil">
                     </span>
-                </div>
+            </div>
         </div>
         <nav class="navbar navbar-dark bg-dark">
             <div class="home__button">
