--- a/views/ofrecer.html
+++ b/views/ofrecer.html
@@ -13,27 +13,27 @@
 <body>
     <div class="container-fluid">
         <div class="container-fluid row bloqueGeneral"> 
-                <div class="col-2 bloque1"></div>
+            <div class="col-2 bloque1"></div>
                 <header class="col-8 bloque2">
-                <h1><a class="btn__h1" href="./home.html">Bringn</a></h1>
-                <style>
+                    <h1><a class="btn__h1" href="./home.html">Bringn</a></h1>
+                    <style>
                     @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-                </style>
-                <p id="subt">Pedilo. Te lo traen.</p>
-                <style>
+                    </style>
+                    <p id="subt">Pedilo. Te lo traen.</p>
+                    <style>
                     @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
-                </style>
+                    </style>
                 </header>
-                <div class="col-2 bloque3">
+            <div class="col-2 bloque3">
                     <span>
                     <p class="p__perfil">PERFIL</p>
                         <img class="img__perfil" src="../SASS/resources/Masla.jpg" alt="Foto de Perfil">
                     </span>
-                </div>
+            </div>
         </div>
         <nav class="navbar navbar-dark bg-dark">
             <div class="home__button">
-                <a class="btn btn-primary" id="hbutton" href="./home.html" role="button">HOME</a>
+                <a class="btn btn-primary" id="hbutton" href="../index.html" role="button">HOME</a>
             </div>
             <div class="nav__btn">
                 <ul class="nav nav-pills">
@@ -58,25 +58,23 @@
 
 <section class="container">
     <form class="o">
-    <label class="o__Esc" for="escribir"></label>
-    <input id="escribir"  type="text" placeholder="Escribir algo...">
+        <label class="o__Esc" for="escribir"></label>
+        <input id="escribir"  type="text" placeholder="Escribir algo...">
     <br>
-    <label class="o__Ubi" for="ubicacion"></label>
-    <input id="ubicacion"  type="text" placeholder="Agregar ubicación 📍">
-    <label class="o__Cos" for="costo"></label>
-    <input id="costo"  type="number" placeholder="Costo 💵">
-    <label class="o__Fec" for="fecha entrega"></label>
-    <input id="fecha entrega"  type="number" placeholder="Fecha de Entrega 📅">
+        <label class="o__Ubi" for="ubicacion"></label>
+        <input id="ubicacion"  type="text" placeholder="Agregar ubicación 📍">
+        <label class="o__Cos" for="costo"></label>
+        <input id="costo"  type="number" placeholder="Costo 💵">
+        <label class="o__Fec" for="fecha entrega"></label>
+        <input id="fecha entrega"  type="number" placeholder="Fecha de Entrega 📅">
     <br>
-    <input id="ofrecer" type="submit" value="Publicar ✔️">
+        <input id="ofrecer" type="submit" value="Publicar ✔️">
     </form>
-    
     <div class="terminos">Al publicar el usuario reconoce haber aceptado y leido los terminos y condiciones sujetos al mismo</div>
 </section>
 
     <footer id="foot">
         <hr>
-        
         <span><p>Terminos y Condiciones</p><p>Ayuda</p><p>Copyright ®</p><p>Contactar</p></span>
         <div class="div__footer">
             <ul>
@@ -86,7 +84,7 @@
             </ul>
         </div>
     </footer>
-</div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
