--- a/views/encargar.html
+++ b/views/encargar.html
@@ -13,20 +13,20 @@
 <body>
     <div class="container-fluid">
         <div class="container-fluid row bloqueGeneral"> 
-                <div class="col-2 bloque1"></div>
+            <div class="col-2 bloque1"></div>
                 <header class="col-8 bloque2">
-                <h1><a class="btn__h1" href="./home.html">Bringn</a></h1>
-                <style>
-                    @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-                </style>
-                <p id="subt">Pedilo. Te lo traen.</p>
-                <style>
-                    @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
-                </style>
+                    <h1><a class="btn__h1" href="../index.html">Bringn</a></h1>
+                    <style>
+                        @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+                    </style>
+                    <p id="subt">Pedilo. Te lo traen.</p>
+                    <style>
+                        @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+                    </style>
                 </header>
                 <div class="col-2 bloque3">
                     <span>
-                    <p class="p__perfil">PERFIL</p>
+                        <p class="p__perfil">PERFIL</p>
                         <img class="img__perfil" src="../SASS/resources/Masla.jpg" alt="Foto de Perfil">
                     </span>
                 </div>
@@ -69,10 +69,11 @@
         <input id="recibir"  type="text" placeholder="Recibir antes de... 📅">
         <br>
         <input id="ofrecer" type="submit" value="Publicar ✔️">
-        </form>
+    </form>
 
     <div class="terminos">Al publicar el usuario reconoce haber aceptado y leido los terminos y condiciones sujetos al mismo</div>
 </section>
+<!-- Footer -->
 <footer id="foot">
     <hr>    
         <span><p>Terminos y Condiciones</p><p>Ayuda</p><p>Copyright ®</p><p>Contactar</p></span>
