--- a/views/iniciarsesion.html
+++ b/views/iniciarsesion.html
@@ -11,6 +11,17 @@
     <title>Iniciar sesion</title>
 </head>
 <body>
+    <div class="col-2 bloque1"></div>
+        <header class="col-8 bloque2">
+            <h1><a class="btn__h1" href="../index.html">Bringn</a></h1>
+            <style>
+                @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+            </style>
+            <p id="subt">Pedilo. Te lo traen.</p>
+            <style>
+                @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+            </style>
+        </header>
         <form>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
