--- a/views/ofrecer.html
+++ b/views/ofrecer.html
@@ -25,10 +25,9 @@
                     </style>
                 </header>
             <div class="col-2 bloque3">
-                    <span>
-                    <p class="p__perfil">PERFIL</p>
-                        <img class="img__perfil" src="../SASS/resources/Masla.jpg" alt="Foto de Perfil">
-                    </span>
+                <span>
+                    <a href="./views/error404.html"><img class="img__perfil" src="../SASS/resources/Masla.jpg" alt="Foto de Perfil"></a>
+                </span>
             </div>
         </div>
         <nav class="navbar navbar-dark bg-dark">
