--- a/SASS/CSS/styles1.css
+++ b/SASS/CSS/styles1.css
@@ -79,11 +79,11 @@ footer {
   body {
     background: white; } }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 979px) and (min-width: 501px) {
   body {
     background: blue; } }
 
-@media screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   body {
     background: green; } }
 
@@ -241,7 +241,7 @@ form {
 #interac__2 {
   width: 6vw;
   height: 4vh;
-  font-size: 15px;
+  font-size: 10px;
   margin-bottom: 50px;
   margin-left: 30px; }
 
