--- a/SASS/SCSS/style.scss
+++ b/SASS/SCSS/style.scss
@@ -99,12 +99,12 @@ footer{
     }
 }
 
-  @media screen  and (max-width: 979px) /* Tablet */ {
+  @media screen  and (max-width: 979px) and (min-width:501px) /* Tablet */ {
     body {
         background: blue;
     }
 }
-  @media screen and (max-width: 500px) /* Mobile */ {
+  @media only screen and (max-width: 500px) /* Mobile */ {
     body {
         background: green;
     }
@@ -270,7 +270,7 @@ form{
 #interac__2{
     width: 6vw;
     height: 4vh;
-    font-size: 15px;
+    font-size: 10px;
     margin-bottom: 50px;
     margin-left: 30px;
 }
