--- a/SASS/CSS/styles1.css
+++ b/SASS/CSS/styles1.css
@@ -5,7 +5,9 @@ body {
   padding: 0px; }
 
 nav {
-  height: 11vh; }
+  height: 11vh;
+  width: 100%;
+  margin: 0px; }
 
 .nav__btn, .dropdown {
   margin-bottom: 4vh; }
@@ -262,3 +264,31 @@ form {
   color: cyan;
   background-color: black;
   border-color: black; }
+
+.img-error {
+  width: 50%; }
+
+.container1 {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center; }
+
+.herror {
+  color: black;
+  font-size: 20px;
+  padding: 20px;
+  font-style: monospace; }
+
+.berror {
+  padding: 13px 30px;
+  border-radius: 15px;
+  border: none;
+  background: cyan;
+  color: white; }
+
+#b-error {
+  text-decoration: none;
+  color: black; }
