--- a/views/home.html
+++ b/views/home.html
@@ -68,7 +68,7 @@
         </div>
         <div class="bringn">
             <div class="container-fluid row">
-                <div class="col-1">
+                <div class="col-1 img-usuario">
                     <img class="img__usuario" src="../SASS/resources/alex.jpg" alt="Foto de Usuario">
                 </div>
                     <p class="col-6 usuarios_msj">Hola! Necesito un Ipad traido de USA. Preferentemente antes del 10/09. Pago $100</p>
