--- a/SASS/CSS/styles1.css
+++ b/SASS/CSS/styles1.css
@@ -1,3 +1,37 @@
+@media only screen and (max-width: 500px) {
+  #obutton {
+    width: 17vw;
+    height: 35px;
+    font-size: 13px; }
+  #ebutton {
+    width: 18vw;
+    height: 35px;
+    font-size: 13px;
+    padding-left: 9px; }
+  .nav__btn {
+    margin: 0px 80px 10px 0px; }
+  #hbutton {
+    width: 10vw;
+    font-size: 11px;
+    padding: 5px; }
+  .dropdown {
+    width: 13vw;
+    font-size: 10px; }
+  .bringn {
+    width: 150vw; }
+  #interac__2 {
+    width: 10vw; }
+  #costo {
+    width: 17vw; }
+  #ubicacion {
+    width: 32vw; }
+  #ofrecer {
+    font-size: 7px; }
+  .terminos {
+    font-size: 15px; }
+  #recibir {
+    margin-top: 10px; } }
+
 body {
   width: 100%;
   height: 100%;
@@ -39,12 +73,16 @@ h1 {
   font-family: 'Rock Salt', cursive;
   color: gray; }
 
+.bloque3 {
+  width: 0%; }
+
 .img__perfil {
-  width: 6vw;
+  width: 100%;
   height: 8vh;
   border-radius: 50%;
   padding: 10px;
-  margin-top: 10px; }
+  margin-top: 10px;
+  margin-left: 30px; }
 
 .bt {
   display: flex;
@@ -84,10 +122,6 @@ footer {
 @media screen and (max-width: 979px) and (min-width: 501px) {
   body {
     background: blue; } }
-
-@media only screen and (max-width: 500px) {
-  body {
-    background: green; } }
 
 #foot {
   font-style: oblique; }
@@ -224,9 +258,12 @@ form {
   background-color: black; }
 
 .img__usuario {
-  width: 4vw;
+  width: 100%;
   height: 5vh;
   border-radius: 50%; }
+
+.img-usuario {
+  width: 0%; }
 
 .usuarios_msj {
   padding-top: 15px;
@@ -292,3 +329,6 @@ form {
 #b-error {
   text-decoration: none;
   color: black; }
+
+#escribir {
+  margin: 10px; }
