--- a/views/ofrecer.html
+++ b/views/ofrecer.html
@@ -26,7 +26,7 @@
                 </header>
             <div class="col-2 bloque3">
                 <span>
-                    <a href="./views/error404.html"><img class="img__perfil" src="../SASS/resources/Masla.jpg" alt="Foto de Perfil"></a>
+                    <a href="./error404.html"><img class="img__perfil" src="../SASS/resources/Masla.jpg" alt="Foto de Perfil"></a>
                 </span>
             </div>
         </div>
